# FPL-HWPC

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.bak  Pipfile  README.md  __init__.py  build.sh  config.py  dkr-client.dockerfile  dkr-worker.dockerfile  docker-compose.yml  dockerbuild.sh  entrypoint.sh  hwpccalc.py  main.py  main.tf  pyproject.toml  requirements.txt  requirements.txt  requirements_nocloud.txt  setup.py  tag_and_push_test.sh
.config/dask/: cloudprovider.yaml
FPL-HWPC-calc/: .gitignore  Dockerfile  pylintrc  pyproject.toml
FPL-HWPC-web/: Dockerfile  docker-compose.yml  hwpc-web-logs.txt  main.py  requirements.txt
data/: discard_types.csv  mbf_to_ccf_conversion.csv  primary_product_data.csv  primary_product_ratios.csv  timber_product_data.csv  x_burned_energy_capture.csv
default_data/: ccf_to_metric_tons_carbon.csv  discard_destination_ratios.csv  discard_destinations.csv  discard_half_lives.csv  discard_ratios.csv  discard_types.csv  end_use_half_lives.csv  end_use_products.csv  harvest_data.csv  mbf_to_ccf.csv  timber_product_ratios.csv  x_burned_energy_capture.csv
distributions/: base_distribution.py  triangular_distribution.py
docs/: recycling_algorithm.md
hwpc/: discard_destinations.py  email.py  input_download.py  meta.py  model.py  model_data.py  model_data_xr.py  names.py  results.py
hwpc-calc/: Dockerfile  requirements_clean_freeze_20230104.txt  requirements_full_freeze_20230104.txt  tag_and_push_test.sh
hwpc-web/: 1.33.0  Dockerfile  config.py  docker-compose.yml  main.py  requirements.txt  results.py
new_data/: ccf_to_metric_tons_carbon.csv  discard_burned_w_energy_capture.csv  discard_destinations.csv  discard_types.csv  discarded_disposition_ratios.csv  distribution_parameters.csv  email  id_lookup.csv  inputs.json  primary_product_data.csv  primary_products.csv  regions.csv  run_name  timber_product_data.csv
old_data/: discard_destinations.csv  end_use_product_ratios.csv  end_use_ratios.csv  timber_product_data.csv  timber_products.csv
pinyon/: lambda-function-pinyon.py  s3-to-box.py
results/: total_composted_carbon_emitted.csv  total_dispositions.csv  total_dumps_carbon.csv  total_dumps_carbon_emitted.csv  total_end_use_products.csv  total_landfills_carbon.csv  total_landfills_carbon_emitted.csv  total_recycled_carbon.csv  total_recycled_carbon_emitted.csv
src/: meta_model.py
src/hwpc/: model.py  (+1 more)
terraform/: ecs_hwpc.tf  elb_elastic_load_balancing.tf  lambda.tf  main.tf  s3_simple_storage.tf
tests/: test_lookups.py  total_selected_dispositions.csv  total_selected_harvest.csv  total_selected_net_changes.csv
utils/: data_loader.py  data_reader.py  default_paths.json  pickler.py  s3_helper.py  singleton.py  user_data_helper.py
(+120 files in other folders)
